--- a/config/samples/istio_v1beta1_istio_cni_gke.yaml
+++ b/config/samples/istio_v1beta1_istio_cni_gke.yaml
@@ -6,7 +6,7 @@ metadata:
   name: istio-sample
 spec:
   version: "1.4.4"
-  mtls: false
+  meshPolicy: PERMISSIVE
   autoInjectionNamespaces:
   - "default"
   sidecarInjector:
