--- a/docs/federation/gateway/samples/istio-multicluster-cr.yaml
+++ b/docs/federation/gateway/samples/istio-multicluster-cr.yaml
@@ -6,7 +6,7 @@ spec:
   version: "1.4.4"
   autoInjectionNamespaces:
   - "default"
-  mtls: true
+  meshPolicy: STRICT
   useMCP: true
   meshExpansion: true
   controlPlaneSecurityEnabled: true
