--- a/config/samples/istio_v1beta1_istio_meshexpansion.yaml
+++ b/config/samples/istio_v1beta1_istio_meshexpansion.yaml
@@ -9,6 +9,7 @@ spec:
   autoInjectionNamespaces:
   - "default"
   useMCP: true
-  meshPolicy: STRICT
+  meshPolicy:
+    mtlsMode: STRICT
   meshExpansion: true
   controlPlaneSecurityEnabled: true
