--- a/config/samples/istio_v1beta1_istio_sds_auth.yaml
+++ b/config/samples/istio_v1beta1_istio_sds_auth.yaml
@@ -6,7 +6,8 @@ metadata:
   name: istio-sample
 spec:
   version: "1.4.4"
-  meshPolicy: STRICT
+  meshPolicy:
+    mtlsMode: STRICT
   autoInjectionNamespaces:
   - "default"
   sds:
