Make MeshPolicy configurable (#369)
* Make MeshPolicy configurable

* Watch all created resources

* fix test

* Watch MeshPolicy resource only after its CRD is created

* Solve for reconciliation that MeshPolicy does not have a namespace

* refactor solution

* Refactor MeshPolicy field to a struct

* Fix overwriting defaults set in CR configs during status updates

* Check MeshPolicy conflict after defaults are set

* Check if controller is set to Istio reconciler

Co-authored-by: Varga Zsolt <waynz0r@users.noreply.github.com>

--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -6,7 +6,8 @@ metadata:
   name: istio-sample
 spec:
   version: "1.4.4"
-  mtls: false
+  meshPolicy:
+    mtlsMode: PERMISSIVE
   autoMtls: false
   includeIPRanges: "*"
   excludeIPRanges: ""
