--- a/config/samples/istio_v1beta1_istio_minimal.yaml
+++ b/config/samples/istio_v1beta1_istio_minimal.yaml
@@ -8,7 +8,8 @@ metadata:
   name: istio-sample
 spec:
   version: "1.4.4"
-  mtls: false
+  meshPolicy:
+    mtlsMode: PERMISSIVE
   autoInjectionNamespaces:
   - "default"
   useMCP: false
