--- a/config/samples/istio_v1beta1_istio_multimesh.yaml
+++ b/config/samples/istio_v1beta1_istio_multimesh.yaml
@@ -9,7 +9,8 @@ spec:
   autoInjectionNamespaces:
   - "default"
   useMCP: true
-  mtls: true
+  meshPolicy:
+    mtlsMode: STRICT
   multiMesh: true
   controlPlaneSecurityEnabled: true
   istioCoreDNS:
