--- a/config/base/crds/istio_v1beta1_istio.yaml
+++ b/config/base/crds/istio_v1beta1_istio.yaml
@@ -56,7 +56,7 @@ spec:
               description: If set to true, and a given service does not have a corresponding
                 DestinationRule configured, or its DestinationRule does not have TLSSettings
                 specified, Istio configures client side TLS configuration automatically,
-                based on the server side mTLS authentication policy and the availibity
+                based on the server side mTLS authentication policy and the availability
                 of sidecars.
               type: boolean
             certificates:
@@ -416,6 +416,17 @@ spec:
                 the scope where meshes will interact with each other, but it is not
                 required to be globally/universally unique.
               type: string
+            meshPolicy:
+              description: MeshPolicy configures the default MeshPolicy resource
+              properties:
+                mtlsMode:
+                  description: MTLSMode sets the mesh-wide mTLS policy
+                  enum:
+                  - STRICT
+                  - PERMISSIVE
+                  - DISABLED
+                  type: string
+              type: object
             mixer:
               description: Mixer configuration options
               properties:
@@ -487,7 +498,8 @@ spec:
                   type: boolean
               type: object
             mtls:
-              description: MTLS enables or disables global mTLS
+              description: 'DEPRECATED: Use meshPolicy instead. MTLS enables or disables
+                global mTLS'
               type: boolean
             multiMesh:
               description: Set to true to connect two or more meshes via their respective
@@ -1077,7 +1089,6 @@ spec:
               type: boolean
           required:
           - version
-          - mtls
           type: object
         status:
           properties:
