--- a/docs/federation/multimesh/istio-multimesh-cr.yaml
+++ b/docs/federation/multimesh/istio-multimesh-cr.yaml
@@ -9,7 +9,8 @@ spec:
   autoInjectionNamespaces:
   - "default"
   useMCP: true
-  mtls: true
+  meshPolicy:
+    mtlsMode: STRICT
   multiMesh: true
   controlPlaneSecurityEnabled: true
   istioCoreDNS:
