--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -57,10 +57,9 @@ spec:
         - port: 80
           targetPort: 80
           name: http2
-          nodePort: 31380
         - port: 443
+          targetPort: 443
           name: https
-          nodePort: 31390
         - port: 15443
           targetPort: 15443
           name: tls
@@ -82,8 +81,10 @@ spec:
       serviceLabels: {}
       ports:
         - port: 80
+          targetPort: 80
           name: http2
         - port: 443
+          targetPort: 443
           name: https
         - port: 15443
           targetPort: 15443
