Add necessary roles to operator as well to be able to grant it to Galley

--- a/config/base/rbac/rbac_role.yaml
+++ b/config/base/rbac/rbac_role.yaml
@@ -50,6 +50,12 @@ rules:
   - create
   - patch
 - apiGroups:
+  - ""
+  resources:
+  - namespaces/finalizers
+  verbs:
+  - update
+- apiGroups:
   - apps
   resources:
   - replicasets
@@ -91,12 +97,6 @@ rules:
   - deployments
   verbs:
   - get
-- apiGroups:
-  - extensions
-  resources:
-  - deployments/finalizers
-  verbs:
-  - update
 - apiGroups:
   - extensions
   resources:
