--- a/deploy/charts/istio-operator/templates/operator-istio-1.4-crd.yaml
+++ b/deploy/charts/istio-operator/templates/operator-istio-1.4-crd.yaml
@@ -62,7 +62,7 @@ spec:
               description: If set to true, and a given service does not have a corresponding
                 DestinationRule configured, or its DestinationRule does not have TLSSettings
                 specified, Istio configures client side TLS configuration automatically,
-                based on the server side mTLS authentication policy and the availibity
+                based on the server side mTLS authentication policy and the availability
                 of sidecars.
               type: boolean
             certificates:
@@ -91,6 +91,12 @@ spec:
                     container arguments
                   items:
                     type: string
+                  type: array
+                additionalEnvVars:
+                  description: If present will be appended to the environment variables
+                    of the container
+                  items:
+                    type: object
                   type: array
                 affinity:
                   type: object
@@ -176,6 +182,12 @@ spec:
                     container arguments
                   items:
                     type: string
+                  type: array
+                additionalEnvVars:
+                  description: If present will be appended to the environment variables
+                    of the container
+                  items:
+                    type: object
                   type: array
                 affinity:
                   type: object
@@ -422,6 +434,17 @@ spec:
                 the scope where meshes will interact with each other, but it is not
                 required to be globally/universally unique.
               type: string
+            meshPolicy:
+              description: MeshPolicy configures the default MeshPolicy resource
+              properties:
+                mtlsMode:
+                  description: MTLSMode sets the mesh-wide mTLS policy
+                  enum:
+                  - STRICT
+                  - PERMISSIVE
+                  - DISABLED
+                  type: string
+              type: object
             mixer:
               description: Mixer configuration options
               properties:
@@ -430,6 +453,12 @@ spec:
                     container arguments
                   items:
                     type: string
+                  type: array
+                additionalEnvVars:
+                  description: If present will be appended to the environment variables
+                    of the container
+                  items:
+                    type: object
                   type: array
                 affinity:
                   type: object
@@ -493,7 +522,8 @@ spec:
                   type: boolean
               type: object
             mtls:
-              description: MTLS enables or disables global mTLS
+              description: 'DEPRECATED: Use meshPolicy instead. MTLS enables or disables
+                global mTLS'
               type: boolean
             multiMesh:
               description: Set to true to connect two or more meshes via their respective
@@ -540,6 +570,12 @@ spec:
                   items:
                     type: string
                   type: array
+                additionalEnvVars:
+                  description: If present will be appended to the environment variables
+                    of the container
+                  items:
+                    type: object
+                  type: array
                 affinity:
                   type: object
                 enableProtocolSniffingInbound:
@@ -582,6 +618,12 @@ spec:
             policy:
               description: Policy configuration options
               properties:
+                additionalEnvVars:
+                  description: If present will be appended to the environment variables
+                    of the container
+                  items:
+                    type: object
+                  type: array
                 affinity:
                   type: object
                 checksEnabled:
@@ -817,6 +859,12 @@ spec:
                   items:
                     type: string
                   type: array
+                additionalEnvVars:
+                  description: If present will be appended to the environment variables
+                    of the container
+                  items:
+                    type: object
+                  type: array
                 affinity:
                   type: object
                 alwaysInjectSelector:
@@ -914,6 +962,12 @@ spec:
             telemetry:
               description: Telemetry configuration options
               properties:
+                additionalEnvVars:
+                  description: If present will be appended to the environment variables
+                    of the container
+                  items:
+                    type: object
+                  type: array
                 affinity:
                   type: object
                 enabled:
@@ -1083,7 +1137,6 @@ spec:
               type: boolean
           required:
           - version
-          - mtls
           type: object
         status:
           properties:
