--- a/docs/federation/gateway/samples/istio-multicluster-cr.yaml
+++ b/docs/federation/gateway/samples/istio-multicluster-cr.yaml
@@ -3,7 +3,7 @@ kind: Istio
 metadata:
   name: gateway-multicluster
 spec:
-  version: "1.4.6"
+  version: "1.5.0-beta.2"
   autoInjectionNamespaces:
   - "default"
   meshPolicy:
