--- a/config/base/crds/istio_v1beta1_istio.yaml
+++ b/config/base/crds/istio_v1beta1_istio.yaml
@@ -214,6 +214,12 @@ spec:
               properties:
                 egress:
                   properties:
+                    additionalEnvVars:
+                      description: If present will be appended to the environment
+                        variables of the container
+                      items:
+                        type: object
+                      type: array
                     affinity:
                       type: object
                     applicationPorts:
@@ -273,6 +279,12 @@ spec:
                   type: boolean
                 ingress:
                   properties:
+                    additionalEnvVars:
+                      description: If present will be appended to the environment
+                        variables of the container
+                      items:
+                        type: object
+                      type: array
                     affinity:
                       type: object
                     applicationPorts:
