--- a/config/base/crds/istio_v1beta1_meshgateway.yaml
+++ b/config/base/crds/istio_v1beta1_meshgateway.yaml
@@ -56,6 +56,12 @@ spec:
           type: object
         spec:
           properties:
+            additionalEnvVars:
+              description: If present will be appended to the environment variables
+                of the container
+              items:
+                type: object
+              type: array
             affinity:
               type: object
             applicationPorts:
