--- a/config/samples/istio_v1beta1_meshgateway.yaml
+++ b/config/samples/istio_v1beta1_meshgateway.yaml
@@ -25,6 +25,7 @@ spec:
     - port: 15443
       targetPort: 15443
       name: tls
+  additionalEnvVars: []
   applicationPorts: ""
   resources:
     requests:
