--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -8,7 +8,7 @@ spec:
   version: "1.5.0-beta.2"
   meshPolicy:
     mtlsMode: PERMISSIVE
-  autoMtls: false
+  autoMtls: true
   includeIPRanges: "*"
   excludeIPRanges: ""
   autoInjectionNamespaces:
