--- a/deploy/charts/istio-operator/templates/operator-statefulset.yaml
+++ b/deploy/charts/istio-operator/templates/operator-statefulset.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: "{{ include "istio-operator.fullname" . }}-operator"
+  name: "{{ include "istio-operator.fullname" . }}"
   namespace: {{ .Release.Namespace }}
   labels:
     control-plane: controller-manager
@@ -20,7 +20,7 @@ spec:
       app.kubernetes.io/name: {{ include "istio-operator.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
       app.kubernetes.io/component: operator
-  serviceName: {{ include "istio-operator.fullname" . }}-operator
+  serviceName: {{ include "istio-operator.fullname" . }}
   template:
     metadata:
       labels:
@@ -31,7 +31,7 @@ spec:
         app.kubernetes.io/component: operator
     spec:
       {{- if .Values.rbac.enabled }}
-      serviceAccountName: {{ include "istio-operator.fullname" . }}-operator
+      serviceAccountName: {{ include "istio-operator.fullname" . }}
       {{- end }}
       terminationGracePeriodSeconds: 60
       containers:
