--- a/config/base/crds/istio_v1beta1_remoteistio.yaml
+++ b/config/base/crds/istio_v1beta1_remoteistio.yaml
@@ -111,6 +111,8 @@ spec:
                 sdsEnabled:
                   description: Whether SDS is enabled.
                   type: boolean
+                securityContext:
+                  type: object
                 tolerations:
                   items:
                     type: object
@@ -318,6 +320,8 @@ spec:
                   type: string
                 resources:
                   type: object
+                securityContext:
+                  type: object
                 useMetadataExchangeFilter:
                   type: boolean
               type: object
@@ -465,6 +469,8 @@ spec:
                     liveness health check to redirect request to sidecar. This makes
                     liveness check work even when mTLS is enabled.
                   type: boolean
+                securityContext:
+                  type: object
                 tolerations:
                   items:
                     type: object
