--- a/config/base/crds/istio_v1beta1_meshgateway.yaml
+++ b/config/base/crds/istio_v1beta1_meshgateway.yaml
@@ -134,6 +134,8 @@ spec:
                 resources:
                   type: object
               type: object
+            securityContext:
+              type: object
             serviceAnnotations:
               type: object
             serviceLabels:
