--- a/deploy/charts/istio-operator/templates/operator-rbac.yaml
+++ b/deploy/charts/istio-operator/templates/operator-rbac.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "istio-operator.fullname" . }}
+  name: {{ include "istio-operator.fullname" . }}{{ .Values.operatorComponentSuffix }}
   namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: {{ include "istio-operator.name" . }}
@@ -15,7 +15,7 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "istio-operator.fullname" . }}
+  name: {{ include "istio-operator.fullname" . }}{{ .Values.operatorComponentSuffix }}
   labels:
     app.kubernetes.io/name: {{ include "istio-operator.name" . }}
     helm.sh/chart: {{ include "istio-operator.chart" . }}
@@ -339,7 +339,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "istio-operator.fullname" . }}
+  name: {{ include "istio-operator.fullname" . }}{{ .Values.operatorComponentSuffix }}
   labels:
     app.kubernetes.io/name: {{ include "istio-operator.name" . }}
     helm.sh/chart: {{ include "istio-operator.chart" . }}
@@ -350,9 +350,9 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ include "istio-operator.fullname" . }}
+  name: {{ include "istio-operator.fullname" . }}{{ .Values.operatorComponentSuffix }}
 subjects:
 - kind: ServiceAccount
-  name: {{ include "istio-operator.fullname" . }}
+  name: {{ include "istio-operator.fullname" . }}{{ .Values.operatorComponentSuffix }}
   namespace: {{ .Release.Namespace }}
 {{- end }}
