--- a/config/samples/istio_v1beta1_istio_cni.yaml
+++ b/config/samples/istio_v1beta1_istio_cni.yaml
@@ -14,3 +14,13 @@ spec:
     enabled: true
     initCNIConfiguration:
       enabled: true
+      chained: true
+      repair:
+        enabled: true
+        hub: ""
+        tag: ""
+        labelPods: true
+        deletePods: true
+        initContainerName: "istio-validation"
+        brokenPodLabelKey: "cni.istio.io/uninitialized"
+        brokenPodLabelValue: "true"
