--- a/config/samples/istio_v1beta1_istio_cni_gke.yaml
+++ b/config/samples/istio_v1beta1_istio_cni_gke.yaml
@@ -15,3 +15,13 @@ spec:
     initCNIConfiguration:
       enabled: true
       binDir: /home/kubernetes/bin
+      chained: true
+      repair:
+        enabled: true
+        hub: ""
+        tag: ""
+        labelPods: true
+        deletePods: true
+        initContainerName: "istio-validation"
+        brokenPodLabelKey: "cni.istio.io/uninitialized"
+        brokenPodLabelValue: "true"
