--- a/deploy/charts/istio-operator/templates/meshgateway-crd-1.4.yaml
+++ b/deploy/charts/istio-operator/templates/meshgateway-crd-1.4.yaml
@@ -63,6 +63,12 @@ spec:
           type: object
         spec:
           properties:
+            additionalEnvVars:
+              description: If present will be appended to the environment variables
+                of the container
+              items:
+                type: object
+              type: array
             affinity:
               type: object
             applicationPorts:
