--- a/config/samples/istio_v1beta1_istio_minimal.yaml
+++ b/config/samples/istio_v1beta1_istio_minimal.yaml
@@ -7,7 +7,7 @@ metadata:
     controller-tools.k8s.io: "1.0"
   name: istio-sample
 spec:
-  version: "1.5.0-beta.5"
+  version: "1.5.0"
   meshPolicy:
     mtlsMode: PERMISSIVE
   autoInjectionNamespaces:
