--- a/deploy/charts/istio-operator/templates/operator-rbac.yaml
+++ b/deploy/charts/istio-operator/templates/operator-rbac.yaml
@@ -117,6 +117,14 @@ rules:
   - deployments
   verbs:
   - get
+  - list
+  - watch
+- apiGroups:
+  - extensions
+  resources:
+  - deployments/finalizers
+  verbs:
+  - update
 - apiGroups:
   - extensions
   resources:
@@ -188,6 +196,15 @@ rules:
   - create
   - get
   - delete
+  - watch
+- apiGroups:
+  - discovery.k8s.io
+  resources:
+  - endpointslices
+  verbs:
+  - get
+  - list
+  - watch
 - apiGroups:
   - istio.banzaicloud.io
   resources:
@@ -210,6 +227,19 @@ rules:
   - update
   - patch
 - apiGroups:
+  - authentication.istio.io
+  - cloud.istio.io
+  - config.istio.io
+  - istio.istio.io
+  - networking.istio.io
+  - rbac.istio.io
+  - security.istio.io
+  - scalingpolicy.istio.io
+  resources:
+  - '*'
+  verbs:
+  - '*'
+- apiGroups:
   - istio.banzaicloud.io
   resources:
   - meshgateways
@@ -230,19 +260,6 @@ rules:
   - get
   - update
   - patch
-- apiGroups:
-  - authentication.istio.io
-  - cloud.istio.io
-  - config.istio.io
-  - istio.istio.io
-  - networking.istio.io
-  - rbac.istio.io
-  - security.istio.io
-  - scalingpolicy.istio.io
-  resources:
-  - '*'
-  verbs:
-  - '*'
 - apiGroups:
   - apps
   resources:
