Make PriorityClassName configurable for Istio control plane components

--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -15,6 +15,7 @@ spec:
   - "default"
   controlPlaneSecurityEnabled: false
   mountMtlsCerts: false
+  # priorityClassName: system-cluster-critical
   defaultResources:
     requests:
       cpu: 10m
