--- a/config/base/crds/istio_v1beta1_istio.yaml
+++ b/config/base/crds/istio_v1beta1_istio.yaml
@@ -659,13 +659,13 @@ spec:
                   type: array
               type: object
             priorityClassName:
-              description: Under Kubernetes v1.17.0 it is not allowed to use the system-cluster-critical
-                and system-node-critical PriorityClass outside of the kube-system
-                namespace, so it is advised to create your own PriorityClass and use
-                its name here On Kubernetes >=v1.17.0 it is possible to configure
-                system-cluster-critical and system-node-critical PriorityClass in
-                order to make sure your Istio pods will not be killed because of low
-                priority class. Refer to https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/#priorityclass
+              description: Prior to Kubernetes v1.17.0 it was not allowed to use the
+                system-cluster-critical and system-node-critical PriorityClass outside
+                of the kube-system namespace, so it is advised to create your own
+                PriorityClass and use its name here On Kubernetes >=v1.17.0 it is
+                possible to configure system-cluster-critical and system-node-critical
+                PriorityClass in order to make sure your Istio pods will not be killed
+                because of low priority class. Refer to https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/#priorityclass
                 for more detail.
               type: string
             proxy:
